--- a/SWAT/Views/Background/Create.cshtml
+++ b/SWAT/Views/Background/Create.cshtml
@@ -5,7 +5,7 @@
 }
 @section Scripts
 {
-  <script src="@Url.Content("~/Content/CommunityInfo.js")"></script>
+  <script src="@Url.Content("~/Content/CommunityInfo.js")" type="text/javascript"></script>
 }
 <h2>Create - Community Information</h2>
 
