--- a/SWAT/Views/Background/Edit.cshtml
+++ b/SWAT/Views/Background/Edit.cshtml
@@ -6,7 +6,7 @@
 
 @section Scripts
 {
-  <script src="@Url.Content("~/Content/CommunityInfo.js")"></script>
+  <script src="@Url.Content("~/Content/CommunityInfo.js")" type="text/javascript"></script>
 }
 
 <h2>Edit</h2>
