--- a/SWAT/Views/WAExtremeEvent/Edit.cshtml
+++ b/SWAT/Views/WAExtremeEvent/Edit.cshtml
@@ -9,7 +9,7 @@
   <script src="@Url.Content("~/Content/WAExtremeEvent.js")" type="text/javascript"></script>
 }
 
-<h2>Edit</h2>
+<h2>Edit - Water Availability</h2>
 
 
 @using (Html.BeginForm())
@@ -17,7 +17,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Water Availability</h4>
+        <h4>Climate and Rainwater - Part V</h4>
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.ID)
