--- a/SWAT/Views/Background/Edit.cshtml
+++ b/SWAT/Views/Background/Edit.cshtml
@@ -9,7 +9,7 @@
   <script src="@Url.Content("~/Content/CommunityInfo.js")" type="text/javascript"></script>
 }
 
-<h2>Edit</h2>
+<h2>Edit - Community Information</h2>
 
 
 @using (Html.BeginForm())
@@ -17,7 +17,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Community Information</h4>
+        <h4>Location and Demographic Information</h4>
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.ID)
