--- a/SWAT/Views/WAMonthlyQuantity/Edit.cshtml
+++ b/SWAT/Views/WAMonthlyQuantity/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit - Water Availability</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Water Availability</h4>
+        <h4>Climate and Rainwater - Part II</h4>
         <hr />
         <p>
             Please rate each month as having more than enough water, just enough water, or not enough water to satisfy community needs
