--- a/SWAT/Views/WAannualPrecip/Create.cshtml
+++ b/SWAT/Views/WAannualPrecip/Create.cshtml
@@ -9,7 +9,7 @@
   <script src="@Url.Content("~/Content/WAannualPrecip.js")" type="text/javascript"></script>
 }
 
-<h2>Create</h2>
+<h2>Create - Water Availability</h2>
 
 
 @using (Html.BeginForm()) 
@@ -17,7 +17,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Water Availability</h4>
+        <h4>Climate and Rainwater - Part III</h4>
         <hr />
         
         @Html.ValidationSummary(true)
