--- a/SWAT/Views/Shared/_Layout.cshtml
+++ b/SWAT/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("SWAT", "Index", "User", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("SWAT", "Details", "User", null, new { id = 191, @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
