--- a/SWAT/Views/Survey/Details.cshtml
+++ b/SWAT/Views/Survey/Details.cshtml
@@ -4,6 +4,12 @@
     ViewBag.Title = "Details";
 }
 
+@section Scripts
+{
+  <script src="@Url.Content("~/Scripts/jquery-2.1.0.min.js")" type="text/javascript"></script>
+  <script src="@Url.Content("~/Scripts/Highcharts-3.0.1/js/highcharts.js")" type="text/javascript"></script>
+}
+
 <h2>Details</h2>
 
 <div>
@@ -51,6 +57,7 @@
         </dd>
 
     </dl>
+    @{Html.RenderAction("_PieChart", new { id = Model.ID});}
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
