--- a/SWAT/Views/User/Details.cshtml
+++ b/SWAT/Views/User/Details.cshtml
@@ -133,25 +133,16 @@
              @Html.ActionLink("Create New Survey", "Create", "Location", new { uid = Model.Userid1 }, null)
         </dd>
     </dl>
-    <div>
-        @{
-            var grid = new WebGrid(Model.tblSWATSurveys, rowsPerPage: 5);
-            @grid.GetHtml(
-            tableStyle: "table",
-            columns: grid.Columns(
-            grid.Column("tblSWATLocation.name", header: "Settlement"),
-            grid.Column("tblSWATLocation.lkpSubnational.Name", header: "Subnation"),
-            grid.Column("tblSWATLocation.lkpCountry.CommonName", header: "Country"),
-            grid.Column("tblSWATLocation.lkpRegion.Name", header: "Region"),
-            grid.Column("StartTime", header: "Start Date"),
-            grid.Column("Status", header: "Status"),
-            grid.Column(header: "", format: (item) => new HtmlString(
-                @Html.ActionLink("Edit", "Edit", "Location", new { uid = Model.Userid1, id = item.LocationID, SurveyID=item.ID}, null).ToString() + " | "+
-                @Html.ActionLink("Delete", "Delete", "Survey", new {id = item.id}, null).ToString()
-                           )
-            )));   
-         }
-    </div>
+
+    @{ if (Model.tblSWATSurveys.Any())
+       {
+        Html.RenderPartial("_Surveys", Model);
+       }
+       else
+       {
+          <p>You do not have any survey.</p>
+       }
+     }
     </div>
     
 <p>
